Trying to fix wrapping

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -38,7 +38,7 @@
       }
 
       a {
-        margin-left: 6px;
+        margin-left: 8px;
         word-break: break-all;
       }
     }
